Styles/style.css
:root {
    /*Cores de fundo*/
    --cor-azure-claro-fundo: #72899b;
    --cor-azure-escuro-fundo: #526d82;
    --cor-cinza-claro: #c9cace;
    /*cor de letra*/
    --cor-letra: white;
    --cor-black: black; 
    /*cores normais*/
    --cor-lime-green: #c1ff72;
    --cor-azul-real: #5271ff;
    /*cores de botões*/
    --cor-cinza-claro-botoes: #adadad;
    --cor-verde: #00bf63;
    --cor-vermelho: #ff5757;
    /*Fontes de texto*/
    --Fonte-padrão: "Pixel";
    --Fonte-lucinda: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}

/* Index */
.index-titulo-pag {
    font-family: var(--Fonte-Lucinda);
    font-size: 5rem;

}

/* Login */
.c-login-slogan-pag {
    font-family: var(--Fonte-Padrão);
    font-size: 4rem;
    width: 59.9%;
    height: 100%;
}

.c-login-separacao {
    width: 0.2%;
    height: 100%;
}

.c-login-area {
    width: 39.9%;
    height: 100%;
}

.login-img {
    width: auto;
    height: 55%;
}

.login-button {
    padding: 0.5%;
    border: none;
}

.login-tamanho-titulo-slogan {
    font-size: 4rem;
    font-weight: bold;
}

.login-tamanho-titulo-login {
    margin-top: 22%;
    font-size: 300%;
    font-weight: bold;
}

/* Hub */

.hub-main-content-aligment{
    align-content: center;
}
.buttom {
    padding: 32px;
    width: 120px;
}

.buttom {
    margin: 24px;
    padding: 32px;
    width: 480px;
    border-radius: 48px;
    display: flex;

}

.hub-buttom {
    align-content: center;
    font-family: var(--Fonte-Lucinda);
    color: var(--cor-letra)
}

.centralizer {
    align-content: center;
}

.hub-header-title-aligment{
    position:absolute ;
    top: 6%;
    right: 50%;
    left: 50%;
    
}


.icon {
    width: 16%;
    height: 15%;
    background-color: var(--cor-letra);
    padding: 1.5%;
    border-radius: 14%;
    gap:;
}
.hub-header-icon {
    width: auto;
    height: 100%;
}

.hub-header-user {
    width:auto;
    height: 50%;
}

.hub-header-height {
    height: 20%;
}
.hub-greetings-user{
    font-size: 400%;
}

/*Admin*/

.admin-button {
    display:block;
    margin-left:0%;
    margin-top:3%;
    width: 500px;
    height: 50px;
    border: none;
    border-radius: 25px;
    cursor: pointer;
    user-select: none;
}

.admin-titulo-texto {
    margin: 0;
    text-align: center;
    user-select: none;
}

.admin-titulo {
    margin: 0px;
    display: flex;
    text-align: center;
    justify-content: center;
    align-items: center;
    position: absolute;
    top: 35%;
    left: 50%;
    transform: translate(-50%, -50%);
    border-radius: 25px;
    width: 500px;
    height: 50px;
    user-select: none;
}

.admin-tabela {
    width: 500px;
    height: 40px;
    align-items: center;
    justify-content: center;
    display: flex;
    user-select: none;
    margin-bottom: 0px;
    gap: 1px;
}

.centralizar-tabela {
    display:block;
    margin-left:37%;
    margin-top:10%;
}

.admin-tabela-button {
    width: 100px;
    height: 40px;
    align-items: center;
    justify-content: center;
    display: flex;
    user-select: none;
    margin-bottom: 0px;
}

.tabela-texto {
    font-size: 25px;
}

.border-tabela {
    border: 2px solid rgb(0, 0, 0);
}

.flex {
    display: flex;
    width: 496px;
    margin-bottom: 0px;
}
/*RelatorioInfo*/
.relatorio-info-tabela {
    width: 500px;
    height: 40px;
    align-items: center;
    justify-content: center;
    display: flex;
    user-select: none;
    margin-bottom: 0px;
    gap: 1px;
}

.relatorio-tempo-tabela {
    width: 120px;
    height: 40px;
    align-items: center;
    justify-content: center;
    display: flex;
    user-select: none;
    margin-bottom: 0px;
    gap: 1px;
}
/*Logo/icon*/
.ajust-icon-logo {
    width: 160px;
    height: 160px;
}

.ajust-icon-menu {
    width: 120px;
    height: 120px;
    margin: 20px;
}
.header {
    width: 100%;
    height: 20%;
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.header {
    width: 100%;
    height: 180px;
    background-color: var(--cor-fundo-claro);
}

/*Universais*/
* {
    font-family: var(--Fonte-Padrão);
}
@font-face {
    font-family: "Pixel";
    src: url(../Fonts/LeagueSpartan-VariableFont_wght.ttf);
}
.class001 {
    /* Conserta posição do botão de voltar */
    position: relative;
    top: 48px;
}
/* d-flex flex-column align-items-center justify-content-center */
/* Se não sabe como centralizar uma div usa isso ^ */
/* Cores */
.back-buttom {
    position: absolute;
    padding: 18px;
    font-family: var(--Fonte-Lucinda);
    font-size: 24px;
    top: 85%;
    left: 2%;
}


.cores-color {
    color: var(--cor-color);
}

.cores-background {
    background-color: var(--cor-background);
}

/* Cores Color */
[data-color="black"] {
    --cor-color: var(--cor-black);
}

[data-color="lime-green"] {
    --cor-color: var(--cor-lime-green);
}

[data-color="white"] {
    --cor-color: var(--cor-letra);
}

/* Cores Background */
[data-background="azul-real"] {
    --cor-background: var(--cor-azul-real);
}

[data-background="azure-escuro-fundo"] {
    --cor-background: var(--cor-azure-escuro-fundo);
}

[data-background="azure-claro-fundo"] {
    --cor-background: var(--cor-azure-claro-fundo);
}

[data-background="cinza-claro-botoes"] {
    --cor-background: var(--cor-cinza-claro-botoes);
}

[data-background="cinza-claro"] {
    --cor-background: var(--cor-cinza-claro);
}

[data-background="verde"] {
    --cor-background: var(--cor-verde);
}

[data-background="vermelho"] {
    --cor-background: var(--cor-vermelho);
}

